[package]
name = "spsc-bip-buffer"
description = "A concurrent, spsc ring-buffer with sized reservations"
version = "0.1.0"
authors = ["Andrea Lattuada <andrea@lattuada.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
default = []
test_nosched = []

[dependencies]

[dev-dependencies]
deterministic = "^0.1"
rand = "^0.6"
